# FloatQuote

./: Tauri_Transparent_Text_Widget_PRD.md  index.html  package-lock.json  package.json  settings.html  tauri.conf.rs
.github/: pull_request_template.md
.github/workflows/: ci.yml
public/fonts/: ui.ai
src/: main.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/src/: main.rs
