[package]
name = "tauri-text-widget"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_text_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0-rc.4", features = ["unstable"] }
tauri-build = "2.0.0-rc.4"
tauri-plugin-opener = "2.0.0-rc.4"
tauri-plugin-autostart = "2.0.0-rc.4"
tauri-plugin-store = "2.0.0-rc.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.56", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_UI_Controls"] }
raw-window-handle = "0.6"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.4", features = ["config-toml"] }
